--- a/finalproject/css/app.css
+++ b/finalproject/css/app.css
@@ -3,26 +3,15 @@
     margin: 0px;
 }
 
-h1{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'ArialNarrow';
-    font-size: 32 pt;
-    font-weight: bold;
-    color: rgb(50,50,50);
-    text-align: center;
-    border: solid 3px;
-    margin: auto;
-    width: 50%;
-}
-
 h2 {
     font-size: 36pt;
     font: "Arial Narrow";
     font-weight: bold;
     text-align: center;
     margin: 0px;
-    padding: 0px;
+    padding-top: 88px;
+    padding-bottom: 28px;
+    color: rgb(43,62,66);
 }
 
 h3 {
@@ -30,29 +19,29 @@ h3 {
     font-weight: bold;
     margin: 0px;
     padding: 0px;
-    color: rgb(50,50,50);
+    color: rgb(43,62,66);
 }
 
 p {
     font-size: 14pt;
     margin: 0px;
     padding: 0px;
-    color: rgb(50,50,50);
+    color: rgb(43,62,66);
 }
 
 ul{
     font-family: 'ArialNarrow';
     font-size: 12pt;
     font-weight: bold;
-    color: rgb(50,50,50);
+    color: rgb(43,62,66);
 }
 
 a{
-    color: rgb(50,50,50);
+    color: rgb(43,62,66);
 }
 
 a:hover{
-    color: rgb(192,54,44);
+    color: rgb(242,88,62);
 }
 
 .header {
@@ -103,50 +92,141 @@ html{
 }
 
 .motto h2{
-    color: white;
+    color: rgb(247,243,232);
 }
 
 .motto p{
-    font: "Arial";
     text-align: center;
-    color: white;
-}
-
-.motto{
-    padding-left: 10rem;
-    padding-right: 10rem;
-    background-color: rgb(192,54,44);
-}
-
-.mottoheader {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    
+    color: rgb(247,243,232);
 }
 
 .mottotext2{
-    padding-bottom: 2rem;
-    padding-top: 2rem;
+    padding-bottom: 100px;
+    padding-top: 40px;
 }
 
-.goals{
-    padding-bottom: 2rem;
-    padding-top: 2rem;
+.motto{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    background-color: rgb(242,88,62);
+}
+
+@media screen and (min-width:600px){
+    .motto{
     padding-left: 10rem;
     padding-right: 10rem;
-    background-color: white;
+    background-color: rgb(242,88,62);}}
+
+.goals{
+    padding-bottom: 100px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    background-color: rgb(247,243,232);
+    text-align: center;
 }
 
+@media screen and (min-width:600px){
+    .goals{
+    padding-bottom: 100px;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    background-color: rgb(247,243,232);
+    text-align: center;
+}
+}
+
+.goals12, .goals22, .goals32, .goals42{
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
+    padding-bottom: 40px;
+}
+
+@media screen and (min-width:600px){
+    .goals12, .goals22, .goals32, .goals42{
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
+    padding-bottom: 0px;
+} 
+
 .aspire{
-    background-color: rgb(128,151,166);
+    background-color: rgb(213,225,221);
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+   
+@media screen and (min-width:600px){
+    .aspire{
+    background-color: rgb(213,225,221);
+    padding-left: 10rem;
+    padding-right: 10rem;
+}
+}
+    
+.goals span{
+    font-weight: bold;
+} 
+
+.aspire12, .aspire22 {
+    padding-bottom: 40px;
+}
+
+.aspire32 {
+    padding-bottom: 100px;
 }
 
 .join{
-    background-color: white;
+    background-color: rgb(242,88,62);
+    padding-left: 10rem;
+    padding-right: 10rem;
+}
+
+.join h2, .join p, .join h3 {
+    color: rgb(247,243,232);
+}
+
+.joinsign {
+    margin-bottom: 100px;
+    margin-top: 40px;
+    text-align: center;
+    border: solid 2px;
+    padding: 10px;
+    border-color: rgb(247,243,232);
+    border-radius: 10px;
+    margin-left: 300px;
+    margin-right: 300px;
+}
+
+.jointext{
+    text-align: left;
+    padding-left: 300px;
+    padding-right: 300px;
 }
 
 .shop{
-    background-color: rgb(192,54,44);
+    background-color: rgb(247,243,232);
+    padding-left: 10rem;
+    padding-right: 10rem;
+    text-align: center;
+}
+
+.shop1{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.shop2{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.shop3 {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 100px;
+}
+
+.shoptext1, .shoptext2, .shoptext3{
+    padding-top: 20px;
 }
 
 .footer{
