--- a/finalproject/css/app.css
+++ b/finalproject/css/app.css
@@ -44,10 +44,6 @@ a:hover{
     color: rgb(242,88,62);
 }
 
-.header {
-    
-}
-
 .logo{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -212,11 +208,73 @@ h6{
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+[type='text'] { 
+    text-align: center;
+    margin-bottom: 100px;
+    margin-top: 40px;
+    text-align: center;
+    border: solid 2px;
+    padding: 10px;
+    border-color: rgb(247,243,232);
+    border-radius: 10px;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    background-color: rgb(242,88,62);
+    color: rgb(247,243,232);
+}
+
+[type='text'], [type='password'], [type='date'], [type='datetime'], [type='datetime-local'], [type='month'], [type='week'], [type='email'], [type='number'], [type='search'], [type='tel'], [type='time'], [type='url'], [type='color'],
+textarea {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 2.4375rem;
+    margin: auto;
+    padding-left: 75px;
+    padding-right: 75px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border-radius: 10px;
+    background-color: rgb(242,88,62);
+    box-shadow: none;
+    transition: none;
+    color: rgb(247,243,232);}
+
+[type='text']:focus, [type='password']:focus, [type='date']:focus, [type='datetime']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='week']:focus, [type='email']:focus, [type='number']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='url']:focus, [type='color']:focus,
+textarea:focus {
+    outline: none;
+    border: 2px solid rgb(247,243,232);
+    background-color: rgb(242,88,62);
+    box-shadow: none;
+    transition: none;
+    color: rgb(247,243,232);} 
+
+input::placeholder,
+textarea::placeholder {
+  color: rgb(247,243,232); }
+
+.inputjoin{
+    padding-bottom: 100px;
+    padding-top: 40px;
+}
+
+div.form
+{
+    display: block;
+    text-align: center;
+}
+form
+{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
     
 @media screen and (min-width:600px) {
     .logo img{
-    max-width: 30%;
-    }
+    max-width: 30%;}
     
     .menu a, .menu .button{
     padding-top: 0px;
